# foreman

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BRANCHING.md  MANUAL.md  RELEASES.md  ROADMAP.md  STATUS.md  TESTING.md
docs/adr/: ADR-0001-runner-session-backend-contract.md  ADR-0002-dashboard-data-access-boundary.md  ADR-0003-web-ui-api-boundary.md  ADR-0004-dashboard-backend-framework.md  ADR-0005-schema-migration-strategy.md  ADR-0006-sprint-autonomy-levels.md  ADR-0007-sprint-planner-chat-session.md  ADR-0008-completion-truth-contract.md  ADR-0009-multi-model-endpoints-via-role-env.md  ADR-0010-tiered-review-and-llm-judged-evidence.md  README.md
docs/checkpoints/: TEMPLATE.md  (+21 more)
foreman/: __init__.py  __main__.py  _toml.py  builtins.py  cli.py  context.py  dashboard.py  dashboard_api.py  dashboard_backend.py  dashboard_runtime.py  dashboard_service.py  digest.py  errors.py  events.py  executor.py  git.py  judge.py  leases.py  meta_agent.py  migrations.py  models.py  orchestrator.py  outcomes.py  planner.py  roles.py  scaffold.py  settings.py  store.py  supervisor_state.py  workflows.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
roles/: architect.toml  code_reviewer.toml  developer.toml  developer_worker.toml  frontier_reviewer.toml  security_reviewer.toml  sprint-planner.toml  triage_reviewer.toml
scripts/: __init__.py  dashboard_dev.py  repo_validation.py  reviewed_claude.py  reviewed_codex.py  validate_repo_memory.py
templates/: agents_md.md.j2
tests/: test_cli.py  test_context.py  test_dashboard.py  test_digest.py  test_e2e.py  test_events.py  test_executor.py  test_judge.py  test_leases.py  test_meta_agent.py  test_migrations.py  test_orchestrator.py  test_outcomes.py  test_reviewed_claude.py  test_reviewed_codex.py  test_roles.py  test_run_retention.py  test_runner.py  test_runner_claude.py  test_runner_codex.py  test_runner_env.py  test_scaffold.py  test_settings.py  test_store.py  test_supervisor_state.py  test_workflows.py
workflows/: development.toml  development_secure.toml  development_tiered.toml  development_with_architect.toml
(+157 files in other folders)
