[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foreman"
version = "0.1.0"
description = "Foreman is an autonomous development engine for spec-driven software delivery."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Foreman contributors"},
]

[project.scripts]
foreman = "foreman.cli:main"

[tool.setuptools.packages.find]
include = ["foreman*"]
