[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foreman"
version = "0.1.0"
description = "Foreman is an autonomous development engine for spec-driven software delivery."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Foreman contributors"},
]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "httpx>=0.27,<1",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
foreman = "foreman.cli:main"

[tool.setuptools.packages.find]
include = ["foreman*"]

[tool.setuptools.package-data]
foreman = [
  "dashboard_frontend_dist/*.html",
  "dashboard_frontend_dist/assets/*",
]
